--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -7,43 +7,17 @@
 }
 
 .items {
-  width: 880px;
+  width: 100%;
   height: 100%;
   margin: 0;
   overflow: hidden;
 }
 
-/*more clickables*/
-
-.more {
-  width: 70px;
-  position: fixed;
-  top: 50%;
-  right: 0;
-  margin-right: 15%;
-  height: 100%;
-}
-
-.more [class*="entypo-"]:before {
-  font-size: 50px;
-  display: block;
-  margin-top: 80px;
-}
-
-.more a {
-  font-size: 50px;
-  color: black;
-}
-
-.entypo-up-open-big {
-  margin-right: 41%;
-}
-
 /* dynamic items, images and items container shit */
 
 .tagged-item {
-  width: 250px;
-  height: 315px;
+  width: 280px;
+  height: 320px;
   float: left;
   overflow: hidden;
   background: white;
