--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,13 +1,4 @@
-<div ng-app "categoryFilter" class="fixed-top">
-  <div ng-controller="CategoryCtrl"> 
-                     
-  <select>
-    <% @names.each do |name| %> 
-    <option value= <%= name %> > <%= name %> </option>
-    <% end %>
-  </select> 
-
-  </div>
+<div class="fixed-top">
   
   <div class="venue-menu-container">
 
