--- a/app/views/venues/_show.html.erb
+++ b/app/views/venues/_show.html.erb
@@ -1,42 +1,38 @@
 <div class="items-container">
 
 <h2>What to wear at <%= @venue.name.titleize %> </h2>
-  <select class="category-dropdown">
-      <option value="">Pick a category</option>
-    <% @names.each do |name|  %>
-      <option value="<%= name.downcase %>"><%= name %></option>
-    <% end %>
-  </select>
+  <div id="dd" class="wrapper-dropdown" tabindex="1"> 
+    <select class="category-dropdown">
+        <option value="">Pick a clothing category...</option>
+      <% @names.each do |name|  %>
+        <option value="<%= name.downcase %>"><%= name %></option>
+      <% end %>
+      </select>
+    </div>
 <script>
   
   showAllCategories = function () {
       <% @names.each do |name| %>
-      $(".<%= name.downcase %>").hide();
+      $(".tagged-item").show();
       <% end %>
   };
-
+    
   handleNewSelection = function () {
-
       showAllCategories();
-
       switch ($(this).val()) {
           <% @names.each do |name| %>
           case "<%=name.downcase %>":
-              $(".<%= name.downcase %>").show();
+              $(".tagged-item").hide();
+              $("#<%= name.downcase %>").show();
           break;
           <% end %> 
       }
   };
 
   $(document).ready(function() {
-      
       $(".category-dropdown").change(handleNewSelection);
-      
-      handleNewSelection.apply($(".category-dropdown"));
-      
+      handleNewSelection.apply($(".category-dropdown"));   
   });
-
-  
 
 </script>
 
@@ -44,7 +40,7 @@
 
     <% @item_search.each do |item| %>
           
-     <div class="tagged-item <%= item.categories[0].name.downcase %>">
+     <div class="tagged-item" id="<%= item.categories[0].name.downcase %>">
         <div class="tagged-item-image">
           <a href="<%= item[:item_url] %>" target="_blank"><img src="<%= item[:img_url] %>" /></a>
         </div>
