--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,3 @@
-<%= @zappos_results.inspect %>
-
-
 <div class="zappos-items-container">
   <% @zappos_results.each do |z| %>
 
@@ -19,7 +16,7 @@
           <%= f.hidden_field :gender, :value => z[:item][:gender]  %>
           <%= f.hidden_field :category, :value => @category %>
           <%= f.hidden_field :tag, :value => @tag %>
-          <%= f.submit "+" %>
+          <%= f.submit "+", :class => 'plus' %>
         <% end %>
 
         <div class="zappos-text-info">
