--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,4 +71,4 @@
     var venueNames = <%= @venue_names.to_json.html_safe %>
 <% end %>
 
-<%= javascript_include_tag 'home' %>
+<%= javascript_include_tag 'home.js' %>
